products/sample/apps/weatherApi/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yodas-gb
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: yodas-gb
  template:
    metadata:
      labels:
        app: yodas-gb
    spec:
      containers:
      - image: gcr.io/heptio-images/ks-guestbook-demo:0.2
        name: yodas-gb
        ports:
        - containerPort: 80
