products/sample/apps/weatherApi/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name:  yodas-gb-ingress
  annotations:
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: cert_name
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
    appgw.ingress.kubernetes.io/health-probe-path: /health
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: dns_url
    http:
      paths:
      - path: /
        backend:
          service:
            name:  yodas-gb
            port:
              number: 80
        pathType: Exact
